// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Analytics event tracking overrides analytics event content 1`] = `
Array [
  Object {
    "event_action": "alert impression",
    "event_category": "ui components",
    "event_label": "other heading",
    "event_name": "alert_impression",
    "event_type": "ui interaction",
    "ga_eventAction": "alert impression",
    "ga_eventCategory": "ui components",
    "ga_eventLabel": "other heading",
    "ga_eventValue": "",
    "heading": "other heading",
    "type": "success",
  },
]
`;

exports[`Alert Analytics event tracking sends analytics event with body-content fallback 1`] = `
Array [
  Object {
    "event_action": "alert impression",
    "event_category": "ui components",
    "event_label": "Warning: Ruhroh",
    "event_name": "alert_impression",
    "event_type": "ui interaction",
    "ga_eventAction": "alert impression",
    "ga_eventCategory": "ui components",
    "ga_eventLabel": "Warning: Ruhroh",
    "ga_eventValue": "",
    "heading": "Warning: Ruhroh",
    "type": "warn",
  },
]
`;

exports[`Alert Analytics event tracking sends analytics event with heading 1`] = `
Array [
  Object {
    "event_action": "alert impression",
    "event_category": "ui components",
    "event_label": "Alert: Ahhh!",
    "event_name": "alert_impression",
    "event_type": "ui interaction",
    "ga_eventAction": "alert impression",
    "ga_eventCategory": "ui components",
    "ga_eventLabel": "Alert: Ahhh!",
    "ga_eventValue": "",
    "heading": "Alert: Ahhh!",
    "type": "error",
  },
]
`;
